<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <QuickContactBadge
            android:id="@+id/quickContactBadge1"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/task_new_title"
            android:width="@dimen/activity_vertical_margin" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100" >

            <EditText
                android:id="@+id/txtTaskName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_title_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtDueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.67"
                    android:ems="10"
                    android:hint="@string/task_duedate_hint"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/txtDueTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.67"
                    android:ems="10"
                    android:hint="@string/task_duetime_hint"
                    android:inputType="time" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <EditText
                android:id="@+id/txtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_notes_hint"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/task_category"
                android:prompt="@string/task_category_prompt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_reminder_text" />

                <ToggleButton
                    android:id="@+id/btnReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_reminder_text" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/reminderBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_save_btn" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_cancel_btn" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>